--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h1 {
     align-content: center;
 }
 
-
+.rulesBtn,
 .createBtn,
 .connectBtn,
 .joinBtn,
@@ -392,7 +392,7 @@ h1 {
     width: 50%;
     margin: auto;
     margin-bottom: 1%;
-    visibility: visible;
+    visibility: hidden;
 }
 
 .popup {
@@ -411,6 +411,38 @@ h1 {
     flex-direction: column;
     justify-content: center;
     gap: 10px;
+}
+
+.rulesBox {
+    background-color:white;
+    border: 3px solid rgb(141, 1, 1);
+    width: 50vw;
+    height:60vh;
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%) scale(1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding-left: 15px;
+    visibility: hidden;
+}
+
+.rulesBox li{
+    text-align: left;
+    font-size: 1rem;
+    font-weight: normal;
+}
+.rulesBox div {
+    font-size: 1rem;
+    font-weight: normal;
+    margin-top: 10px;
+    padding-left: 15px;
 }
 
 .grey-out {
